{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "66c74fca-f65b-45b7-b450-69e5fa9adf8c",
            "actions": [
                {
                    "name": "MoveForward",
                    "type": "Button",
                    "id": "140a3502-8bb8-4bf8-8e62-4ee5dd85b636",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Destroy",
                    "type": "Button",
                    "id": "da6eb622-70a0-40dd-9caa-64aba6cfe041",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Save",
                    "type": "Button",
                    "id": "5265139a-e3b2-4973-8039-dd054fec89e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Load",
                    "type": "Button",
                    "id": "362e2f12-9dc1-4809-8834-24ae7ec34a13",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveBack",
                    "type": "Button",
                    "id": "db82e7c9-f81b-468a-a151-20b2e8c52d41",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "e1724019-46b0-4c79-9f1d-a43a1444e3f3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "cf3a01e7-ead4-4b9c-9692-fa1d85227c8f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "d63096aa-f87e-48dc-b3de-2791355073e1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ViewUp",
                    "type": "Button",
                    "id": "bde29ed5-6188-464c-8c30-82ba421fa19b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ViewDown",
                    "type": "Button",
                    "id": "18795660-7d7c-4f34-a1e5-c3bdccc8bb5b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ViewLeft",
                    "type": "Button",
                    "id": "c1b31bb9-7bb5-4933-aff7-a0adca2a0918",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ViewRight",
                    "type": "Button",
                    "id": "d35f484d-6c53-4801-86fb-b2b7dbefba42",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "View",
                    "type": "PassThrough",
                    "id": "49d7a0dd-3255-4b6c-ad36-3099779aae11",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "10c42366-71fc-4abf-8660-2cf029d0375e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PlaceBlock",
                    "type": "Button",
                    "id": "c01253b7-5f1b-4e3a-b154-55dfa3edc300",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Scroll",
                    "type": "Value",
                    "id": "c26ae133-4baa-4445-ad57-192f7f1e2959",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bfec5138-99fb-4d95-9289-35f3bbb792bb",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e71f58b-135e-4a07-8a03-3dba4430d815",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40cffa80-4314-4fff-894c-9e08b872d64c",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Destroy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9083e057-967f-4c06-aea7-044826a1d70c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Destroy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2af83d5-fbfa-419c-bf04-68c0bb19bf94",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Save",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f34c374-162c-4427-a8e6-541c699110a4",
                    "path": "<Keyboard>/f5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Save",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "249d5a6a-a6dc-4372-920f-d2c72f65c380",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Load",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4374065d-0e96-4615-b398-9cd238e96aa2",
                    "path": "<Keyboard>/f6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Load",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aafaefc7-22fe-4906-bff5-d891c13aaed3",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2bde2d97-694d-407a-a629-4a411474c6bb",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c200214-13be-46fd-9b11-dd010ba9399d",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62b5c8d1-f70c-48d3-b2e3-7afa92980479",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9f8a609-5980-4052-81dd-a45b3f184505",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38b64866-a460-4b56-a2fb-baa93133b385",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29dc5ce3-356c-4bbc-9c2a-a3077fd36365",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55bdc580-adae-4549-83de-fd6db7f94948",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9473886e-91f9-4fa9-8438-03da06417664",
                    "path": "<Gamepad>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ViewUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2a2a92a-6698-4bdb-a29b-522e437c8e97",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ViewDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4bb9c3d5-1eba-43e8-aa57-5cb8403ac563",
                    "path": "<Mouse>/backButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ViewDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e4d772c-0402-4d07-be84-7699f4c9fb98",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ViewLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6d9a582-8128-47d3-af62-86af6291de74",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ViewRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "04e5520c-e313-4aa9-a75e-3cbb9caf39da",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ViewRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42605e90-915c-4b65-b7de-948e49ec9806",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "View",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d4a3dcd-2d10-489f-a453-59b6358d9fe9",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "View",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "318f4d2f-98aa-4588-8945-2a2a0a21ea51",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "47c2d68d-5c65-457f-a901-517720c94a5e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9ae0e71f-c6af-4ee2-80bd-0f2363c7b2ff",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e75f3017-0ecd-4e98-bb62-5a9bf9319429",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "57ce576a-7de6-412c-aa4d-803e2ada0e46",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e1b4b093-952a-4711-9ebe-b75894f18184",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5989f241-e375-40f5-9a23-dedbf152c479",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceBlock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6ac23b4-c866-4619-a4d2-844083fb09aa",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceBlock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46e3ec58-7c0b-425a-b782-27841eeac671",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}